# OmegaLoggingController

./: .gitmodules  CMakeLists.txt  Kconfig  README.md  idf_component.yml
Examples/Logging/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
Examples/Logging/main/: CMakeLists.txt  main.c
Examples/Logging/storage/: device_information.txt  wlan.txt
OmegaLoggingSystemController/: CMakeLists.txt
OmegaLoggingSystemController/inc/: OmegaLoggingSystemController.h
OmegaLoggingSystemController/src/: OmegaLoggingSystemController.c
inc/: OmegaLoggingSystemController.h
src/: OmegaLoggingSystemController.c
